# InferenceGym

./: .dockerignore  .env.example  .gitattributes  .gitignore  Description.md  Dockerfile  EXECUTIVE_SUMMARY.md  QUICK_FIX_SCRIPT.sh  README.md  RULES.md  SUBMISSION_TEST_REPORT.md  TASK.md  docker-compose.yml  evaluate.py  guideline.md  inference-gym-final-plan.md  inference.py  inferencegym_plan.html  openenv.yaml  pyproject.toml  requirements.txt  train.py
agents/: heuristic_agent.py  llm_agent.py  ppo_agent.py  random_agent.py
llmserve_env/: __init__.py  client.py  models.py  task_catalog.py
rl/: env_wrapper.py  normalize.py  policy_network.py  ppo.py
scripts/: README.md  generate_lookup_table.py  pre_submission_check.py  process_burstgpt.py  test_reward_logic.py  verify_task1.py  verify_triggers.py
server/: Dockerfile  app.py  baseline_agent.py  baseline_inference.py  grader.py  kv_cache_simulator.py  llmserve_environment.py  optimal_solver.py  replay_assets.py  reward_calculator.py  schemas.py  serving_backend.py  session_manager.py  slo_monitor.py  speculative_decoder.py  trace_simulator.py  web_ui.py  workload_generator.py
tests/: conftest.py  test_api.py  test_baseline_inference.py  test_env.py  test_environment_smoke.py  test_grader.py  test_inference.py  test_serving_backend.py  test_simulator.py  test_task_catalog.py  test_workload_replay.py
weights/: ppo_task1_static.pt  ppo_task1_static_step10240.pt  ppo_task1_static_step20480.pt  ppo_task1_static_step30208.pt  ppo_task1_static_step40448.pt  ppo_task1_static_step50176.pt  ppo_task2_bursty.pt  (+21 more)
(+10 files in other folders)
